# mkdocs-material-relative-language-selector

./: .bumpversion.cfg  .pre-commit-config.yaml  MANIFEST.in  README.md  mmrlsp.py  schema.json  setup.cfg
.github/workflows/: ci.yml
mmrlsp/: __init__.py  material-relative-language-selector.js
