[metadata]
name = mkdocs_material_relative_language_selector
version = 1.1.3
description = Relative access between translations using mkdocs-material theme.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mondeja/mkdocs-material-relative-language-selector
author = Álvaro Mondéjar Rubio
author_email = mondejar1994@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Documentation
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = mmrlsp
python_requires = >=3.6
include_package_data = True

[options.entry_points]
mkdocs.plugins =
    material-relative-language-selector = mmrlsp:MkdocsMaterialRelativeLanguageSelectorPlugin

[options.extras_require]
dev =
    bump2version==1.0.1
    flake8==3.9.1
    flake8-implicit-str-concat==0.2.0
    flake8-print==4.0.0
    isort==5.8.0
    pre-commit==2.12.1

[isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 79
use_parentheses = True
combine_as_imports = True
include_trailing_comma = True
sections = STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
